# CXX-OOP-Labs

./: .gitignore  .gitmodules  README.md
lab1-BigInt/: CMakeLists.txt  README.md
lab1-BigInt/lib/bigint/: CMakeLists.txt
lab1-BigInt/lib/bigint/include/: big_int.h  bigint.h
lab1-BigInt/lib/bigint/src/: big_int.cpp  bigint.cpp
lab1-BigInt/lib/bigint/test/: CMakeLists.txt  test_bigint.cpp
lab1-BigInt/src/: BigInt.cpp  BigInt.h  CMakeLists.txt  main.cpp
lab1-BigInt/src/include/BigInt/: BigInt.h
lab1-BigInt/test/: CMakeLists.txt  UnaryOperatorsTest.cpp  main.cpp
lab2-Prisoners_Dilemma/: CMakeLists.txt  README.md
lab2-Prisoners_Dilemma/lib/game/: CMakeLists.txt
lab2-Prisoners_Dilemma/lib/game-modes/: CMakeLists.txt
lab2-Prisoners_Dilemma/lib/game-modes/include/: DetailedGame.h  FastGame.h  Game.h  IGameMode.h  TournamentGame.h
lab2-Prisoners_Dilemma/lib/game-modes/src/: DetailedGame.cpp  FastGame.cpp  Game.cpp  TournamentGame.cpp
lab2-Prisoners_Dilemma/lib/game/include/: Game.h  GameHub.h
lab2-Prisoners_Dilemma/lib/game/src/: Game.cpp  GameHub.cpp
lab2-Prisoners_Dilemma/lib/matrix-field/: CMakeLists.txt
lab2-Prisoners_Dilemma/lib/matrix-field/include/: IMatrix.h  MoveMatrix.h  PlayingField.h  ResultMatrix.h
lab2-Prisoners_Dilemma/lib/matrix-field/src/: MoveMatrix.cpp  PlayingField.cpp  ResultMatrix.cpp
lab2-Prisoners_Dilemma/lib/modes/: CMakeLists.txt
lab2-Prisoners_Dilemma/lib/modes/include/: DetailedGameMode.h  FastGameMode.h  GameMod.h  GameModeCreator.h  IGameMod.h  IGameMode.h  IGameModeCreator.h  TournamentGameMode.h
lab2-Prisoners_Dilemma/lib/modes/src/: DetailedGameMode.cpp  FastGameMode.cpp  TournamentGameMode.cpp
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/: CMakeLists.txt
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/game-mode/: CMakeLists.txt
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/game-mode/include/: DetailedGameMode.h  FastGameMode.h  TournamentGameMod.h  TournamentGameMode.h
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/game-mode/src/: DetailedGameMod.cpp  FastGameMod.cpp
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/include/: DetailedGameMod.h  Factory.h  FastGameMod.h  Game.h  GameMod.h  IMatrix.h  IStrategy.h  Matrix.h  MoveMatrix.h  ParsingCommandLineArgs.h  Player.h  PlayingField.h  ResultMatrix.h  Strategy.h  StrategyFactory.h  TournamentGameMod.h
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/src/: Factory.cpp  Game.cpp  MoveMatrix.cpp  ParsingCommandLineArgs.cpp  Player.cpp  PlayingField.cpp  ResultMatrix.cpp  TournamentGameMod.cpp
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/strategies/: CMakeLists.txt
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/strategies/include/: DefaultStrategy.h  RandomStrategy.h  SimpleStrategy.h  SmartStrategy.h
lab2-Prisoners_Dilemma/lib/prisoner-dilemma-game/strategies/src/: DefaultStrategy.cpp  RandomStrategy.cpp  SimpleStrategy.cpp
lab2-Prisoners_Dilemma/lib/prisoner_dilemma_game/src/: Game.cpp  Matrix.cpp  PlayingField.cpp  ResultMatrix.cpp
lab2-Prisoners_Dilemma/lib/strategies/: CMakeLists.txt
lab2-Prisoners_Dilemma/lib/strategies/include/: AlternatingStrategy.h  AlwaysBetrayerStrategy.h  DefaultStrategy.h  IStrategy.h  MetaStrategy.h  PersonStrategy.h  PlayerChoice.h  RandomStrategy.h  SimpleStrategy.h  SmartStrategy.h  StrategyFactory.h
lab2-Prisoners_Dilemma/lib/strategies/src/: AlternatingStrategy.cpp  AlwaysBetrayerStrategy.cpp  DefaultStrategy.cpp  MetaStrategy.cpp  PersonStrategy.cpp  RandomStrategy.cpp  SimpleStrategy.cpp  SmartStrategy.cpp  StrategyFactory.cpp
lab2-Prisoners_Dilemma/src/: main.cpp
lab3-SoundProcessor/: CMakeLists.txt
lab3-SoundProcessor/WAVfiles/configuration/: config1.txt
lab3-SoundProcessor/lib/ConfigParser/: CMakeLists.txt
lab3-SoundProcessor/lib/ConfigParser/include/: ConfigParser.hpp  ConfigParserExceptions.hpp  ConvertersConfigParsers.hpp
lab3-SoundProcessor/lib/ConfigParser/src/: ConfigParser.cpp  ConfigParserExceptions.cpp  ConvertersConfigParsers.cpp
lab3-SoundProcessor/lib/Converter/: CMakeLists.txt
lab3-SoundProcessor/lib/Converter/include/: ConverterCreator.hpp  ConverterException.hpp  DoubleMixConverter.hpp  IConverter.hpp  MixConverter.hpp  MuteConverter.hpp
lab3-SoundProcessor/lib/Converter/src/: ConverterCreator.cpp  ConverterExceptions.cpp  DoubleMixConverter.cpp  MixConverter.cpp  MuteConverter.cpp
lab3-SoundProcessor/lib/SoundProcessor/: CMakeLists.txt
lab3-SoundProcessor/lib/SoundProcessor/include/: SoundProcessor.hpp  SoundProcessorExceptions.hpp
lab3-SoundProcessor/lib/SoundProcessor/src/: SoundProcessor.cpp  SoundProcessorExceptions.cpp
lab3-SoundProcessor/lib/WAV/: CMakeLists.txt
lab3-SoundProcessor/lib/WAV/include/: WAVExceptions.hpp  WAVReader.hpp  WAVUtil.hpp  WAVWriter.hpp
lab3-SoundProcessor/lib/WAV/src/: WAVReader.cpp  WAVWriter.cpp  WavExceptions.cpp
lab3-SoundProcessor/src/: main.cpp
lab4-CSV_Parser/: CMakeLists.txt
lab4-CSV_Parser/CSVExamples/: FirstExample.csv  SecondExample.csv  text.csv
lab4-CSV_Parser/lib/CSVParser/: CMakeLists.txt
lab4-CSV_Parser/lib/CSVParser/include/: CSVParser.hpp
lab4-CSV_Parser/lib/CSVParser/src/: CSVParser.cpp
lab4-CSV_Parser/lib/tuplePrint/include/: TuplePrint.hpp
lab4-CSV_Parser/lib/tupleUtility/: CMakeLists.txt
lab4-CSV_Parser/lib/tupleUtility/include/: TupleUtility.hpp
lab4-CSV_Parser/src/: main.cpp
